@startuml
'https://plantuml.com/class-diagram'

class ToDoListManager {
    main()
    start()
}

class ToDoListManagerController {
    + filterMenu: Menu
    + filterToggleGroup: ToggleGroup
    + showAllFilter: RadioMenuItem
    + showDoneFilter: RadioMenuItem
    + showNotDoneFilter: RadioMenuItem
    + toDoListView: ListView<ToDoList>
    + listTreeTable: TreeTableView<ToDoListItem>
    - model: ToDoListModel
    - doneColumn: TreeTableColumn<ToDoListItem, Boolean>
    - descriptionColumn: TreeTableColumn<ToDoListItem, String>
    - dateColumn: TreeTableColumn<ToDoListItem, String>

    + initialize()

    - renameListButtonClicked(): void

    - addItemButtonClicked(): void
    - removeItemButtonClicked(): void
    - editItemButtonClicked(): void
    - markCompleteButtonClicked(): void

    - showAllFilterClicked(): void
    - showDoneFilterClicked(): void
    - showNotDoneFilterClicked(): void
    - sortButtonClicked(): void

    - menuSaveAllClicked(): void
    - menuLoadListClicked(): void
    - clearListButtonClicked(): void
}

class ToDoListModel {
    + toDoListGroup : ArrayList<ToDoList>
    - filter: String

    <<constructor>> ToDoListModel()


    + addItem(): void
    + renameList(): void
    - changeListName(ToDoList, String): void
    - addItemToList(ToDoList, String, String): void
    + removeItem(): void
    - removeItemFromList(ToDoListItem): void
    + completeToggle(): void
    - completeTogglePass(ToDoListItem): void
    + sort(): void
    + updateViews(): void
    + updateFilter(): void
    + changeFilter(String): void
    + getFilter(): String
    + getBigString(): String
    + saveAll(): void
    + load(): void
    + clearList(): void
    + replaceList(ToDoList): void
    - updateTable(ToDoList): void
    + editItem(): void
    - editItemValues(ToDoListItem, String, String): void
}

class SortByDateComparator {
    + compare(ToDoListItem, ToDoListItem): int
}

class RenameListPopupController {
    + nameField: TextField

    confirmButtonPressed(): void
}

class NewItemPopupController {
    + dateField: TextField
    + descriptionField: TextArea

    cancelButtonPressed(): void
    confirmButtonPressed(): void
}

class FileNamePopupController {
    + fileNameField: TextField

    confirmButtonPressed(): void
}

class ToDoList {
    - title: SimpleStringProperty
    - list: ArrayList<ToDoListItem>

    <<constructor>> ToDoList(String)
    <<constructor>> ToDoList(String, String, String)

    + getTitle(): String
    + setTitle(String): void

    + getItem(int): ToDoListItem
    + addItem(String, String): void
    + addItem(String, String, String): void
    + removeItem(ToDoListItem): void
    + editItem(ToDoListItem, String, String): void
    + sortItemList(): void
    + toString(): String
}

class ToDoListItem {
    - description: SimpleStringProperty
    - date: String
    - complete: boolean

    <<constructor>> ToDoListItem (String, String)
    <<constructor>> ToDoListItem (String, String, String)

    + updateItem(String, String): void
    + updateDescription(String): void
    + updateDate(String): void
    + toggleComplete(): void

    + getDescription(): String
    + getDate(): String
    + getStatus(): boolean
    + toString(): String
}

javafx.Application <|-- ToDoListManager
ToDoListManager - ToDoListManagerController
ToDoListManagerController *--> ToDoListModel
ToDoListModel *-> ToDoList
ToDoListModel *-> SortByDateComparator
ToDoListModel -- RenameListPopupController
ToDoListModel -- NewItemPopupController
ToDoListModel -- FileNamePopupController
ToDoList *-> ToDoListItem

@enduml